--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Experience</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>We've worked with brands large and small to provide value<br />
+									in a more flexible fashion. Reliable experience for the projects you need done today.</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
@@ -113,12 +113,6 @@
 										<strong>Private Contract</strong> Competitive Adantage
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 
 						<!-- Get Started -->
@@ -130,8 +124,7 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="https://forms.gle/QrEnXaL19vB4CWVc9" class="button primary">Quick Contact Form</a></li>
 									</ul>
 								</footer>
 							</section>
